@@ -13,6 +13,8 @@ Summary: smartmontools release 6.3
 - SCSI: Improved support of modern disks (SAS SSDs).
 - SCSI: Fixed sense data noise from old disks.
 - update-smart-drivedb man page.
+- configure option '--with-smartdscriptdir'.
+- configure option '--with-smartdplugindir'.
 - configure option '--with-systemdenvfile'.
 - Removed build time stamps to support reproducible builds.
 - Compile fixes for C++11.
